--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
+    "java.project.outputPath": "WEB-INF\\classes",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "WEB-INF/lib/**/*.jar"
-    ],
-    "java.project.outputPath": "WEB-INF/classes"
+        "WEB-INF\\lib\\commons-logging-1.0.4.jar",
+        "WEB-INF\\lib\\freemarker-2.3.8.jar",
+        "WEB-INF\\lib\\jstl.jar",
+        "WEB-INF\\lib\\mysql-connector-j-8.1.0.jar",
+        "WEB-INF\\lib\\ognl-2.6.11.jar",
+        "WEB-INF\\lib\\struts2-core-2.0.11.jar",
+        "WEB-INF\\lib\\xwork-2.0.4.jar",
+        "WEB-INF\\lib\\struts2-core-6.3.0.2.jar",
+        "WEB-INF\\lib\\xwork-core-2.3.4.jar"
+    ]
 }
